EIP1-2471: EIP1-2782: Map supporting information format to db entity (#102)